Fix flexbox grid margins bug on mobile

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -6,14 +6,18 @@
     flex: 1;
 
     @include mobile-only {
-      min-width: 100%;
+      flex: 1 0 100%;
     }
   }
 }
 
 .row {
   flex-direction: row;
-  margin: 0 -.5rem;
+  margin: 0 .5rem 0 -.5rem;
+
+  @include tablet-up {
+    margin: 0 -.5rem;
+  }
 
   > * {
     margin: 0 .5rem 1rem;
